[gd_scene load_steps=18 format=1]

[ext_resource path="res://scenes/act_1/act_1.gd" type="Script" id=1]
[ext_resource path="res://scenes/act_1/background.png" type="Texture" id=2]
[ext_resource path="res://shaders/basic_water.tres" type="Shader" id=3]
[ext_resource path="res://scenes/act_1/displacement.png" type="Texture" id=4]
[ext_resource path="res://scenes/act_1/displacement2.png" type="Texture" id=5]
[ext_resource path="res://scenes/act_1/platform.png" type="Texture" id=6]
[ext_resource path="res://scenes/act_1/hell_sign.png" type="Texture" id=7]
[ext_resource path="res://scenes/act_1/altar.png" type="Texture" id=8]
[ext_resource path="res://scenes/act_1/platform_demon.png" type="Texture" id=9]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=10]
[ext_resource path="res://fonts/godot_tinyfont.fnt" type="BitmapFont" id=11]

[sub_resource type="CanvasItemMaterial" id=1]

shader/shader = ExtResource( 3 )
shader/shading_mode = 0
shader_param/noise = ExtResource( 4 )
shader_param/noise2 = ExtResource( 5 )

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 0.172549, 0.156863, 0.156863, 1, 0.235294, 0.235294, 0.25098, 1 )

[sub_resource type="Animation" id=3]

length = 1.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]

resource/name = "face"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=5]

resource/name = "game"
length = 5.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 2, 4 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 11, 12 ]
}

[sub_resource type="Animation" id=6]

resource/name = "cycle"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="act_1" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="background_layer" type="CanvasLayer" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="background" type="Sprite" parent="background_layer"]

transform/pos = Vector2( 0, -52 )
texture = ExtResource( 2 )
centered = false

[node name="reflection" type="Sprite" parent="background_layer"]

material/material = SubResource( 1 )
transform/pos = Vector2( 32.3281, 146 )
transform/scale = Vector2( 1.00937, 1 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -35, -18 )

[node name="platform" type="Sprite" parent="."]

transform/pos = Vector2( 165, 109 )
texture = ExtResource( 6 )
offset = Vector2( 0, 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="particles_up" type="Particles2D" parent="platform"]

transform/pos = Vector2( 1, 16 )
config/amount = 16
config/lifetime = 3.0
config/preprocess = 3.0
config/process_mode = 1
config/half_extents = Vector2( 60, 16 )
params/direction = 180.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 180.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/spread = 1.0
color/color = Color( 0.148438, 0.148438, 0.148438, 1 )
color/color_ramp = SubResource( 2 )

[node name="particles_down" type="Particles2D" parent="platform"]

visibility/behind_parent = true
transform/pos = Vector2( -2, 46 )
config/amount = 50
config/lifetime = 5.0
config/preprocess = 10.0
config/process_mode = 1
config/half_extents = Vector2( 60, 0 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 4.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 2.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/initial_size = 1.0
color/color = Color( 0.172549, 0.156863, 0.156863, 1 )

[node name="YSort" type="YSort" parent="."]

transform/pos = Vector2( 6, 18 )
sort/enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="hell_sign" type="Sprite" parent="YSort"]

editor/display_folded = true
transform/pos = Vector2( 123, 87 )
texture = ExtResource( 7 )
region = true
region_rect = Rect2( 4, 2, 47, 48 )
__meta__ = {
"_edit_lock_": true
}

[node name="number" type="Sprite" parent="YSort/hell_sign"]

transform/pos = Vector2( 14, -6 )
texture = ExtResource( 7 )
region = true
region_rect = Rect2( 53, 1, 3, 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="YSort/hell_sign/number"]

transform/pos = Vector2( -1, -1 )
config/amount = 16
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.01
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 2.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/spread = 1.0
randomness/linear_velocity = 1.0
randomness/initial_size = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="altar" type="Sprite" parent="YSort"]

transform/pos = Vector2( 190, 110 )
texture = ExtResource( 8 )
offset = Vector2( 0, -4 )
__meta__ = {
"_edit_lock_": true
}

[node name="blood_pool" type="Sprite" parent="YSort"]

editor/display_folded = true
transform/pos = Vector2( 205, 107 )
texture = ExtResource( 9 )
offset = Vector2( 0, 12 )
vframes = 5
hframes = 3
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="demon" type="Sprite" parent="YSort/blood_pool"]

texture = ExtResource( 9 )
offset = Vector2( 0, 12 )
vframes = 5
hframes = 3
__meta__ = {
"_edit_lock_": true
}

[node name="body" type="Sprite" parent="YSort/blood_pool/demon"]

texture = ExtResource( 9 )
offset = Vector2( 0, 12 )
vframes = 5
hframes = 3
frame = 12

[node name="anim_blood" type="AnimationPlayer" parent="YSort/blood_pool/demon"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/cycle = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "cycle"

[node name="anim_body" type="AnimationPlayer" parent="YSort/blood_pool/demon"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/face = SubResource( 4 )
anims/game = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="player" parent="YSort" instance=ExtResource( 10 )]

transform/pos = Vector2( 160, 106 )

[node name="swordparticles" type="Particles2D" parent="."]

transform/pos = Vector2( 167, 118 )
config/amount = 16
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.01
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 2.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/spread = 1.0
randomness/linear_velocity = 1.0
randomness/initial_size = 1.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]

color = Color( 1, 0.81723, 0.792969, 1 )

[node name="actiontimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="escape" type="Label" parent="."]

visibility/opacity = 0.937066
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 134.0
margin/top = 171.0
margin/right = 318.0
margin/bottom = 179.0
custom_fonts/font = ExtResource( 11 )
text = "press down to skip intro or fire to skip text"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="escape"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/cycle = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "cycle"


